k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 5000
  selector:
    app: hello
