k8s/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello
            port:
              number: 5000
      - pathType: Prefix
        path: "/web"
        backend:
          service:
            name: web
            port:
              number: 8080
